workloads/webserver/deployment.yaml
# docker pull ghcr.io/2143-labs/bevy2025:webserver-wasm-latest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: workload-type
                    operator: In
                    values:
                      - general
      containers:
        - name: webserver
          image: ghcr.io/2143-labs/bevy2025:webserver-wasm-latest
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: &port 8000
              name: http

          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 500m
              memory: 500Mi

          livenessProbe:
            httpGet:
              path: /
              port: *port
            initialDelaySeconds: 1
            periodSeconds: 5
            failureThreshold: 25

          readinessProbe:
            httpGet:
              path: /
              port: *port
            initialDelaySeconds: 1
            periodSeconds: 5
            failureThreshold: 3
