workloads/webserver/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webserver
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: rots-https
    - name: shared-gateway
      sectionName: prod-rots-https
  hostnames:
    - rots.2143.me
    - prod.rots.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: public-rate-limit
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: public-inflight-limit
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: crowdsec-bouncer
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
